<resources>
    <string name="app_name">1st_Exam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name">Company Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
</resources>